# aai

./: .gitignore  .gitmodules  README.md  Untitled.ipynb  dataset.npz  res.txt  setup.py
cpu/: play.py  test.py
dataset/: dataset-51.npz  dataset-52.npz  dataset-53.npz  dataset-54.npz
examples/: load_test.py  parse_kifu_data.ipynb  prob.py  reversi-demo.py  reversi-demo2.py  traverse_all.py
examples/iizuka/: hello_world.py
game/: board.py  example.py  game.py  parse_kifu_data.ipynb  play_game.py
models/: __init__.py  rl_policy.py  rollout_policy.py  rollout_valuenet.py  sl_policy.py  value_net.py
othello-js-master/: README.md  __init__.py  index.html  montecarlo_policy.py  selector.py  server.py
othello-js-master/js/: app.js  othello.js  othello.js~70b6ad31aaec13cbd18555390389d19ad4c8adbd
reversi/: __init__.py  board.py  color.py
reversi/traverse/: CMakeLists.txt
reversi/traverse/include/: bitboard.h  bitboard_core.h  macro.h  traverse.h  xorshift.h
reversi/traverse/src/: traverse.c
train_data/: make_train_data.py
training/: rl_with_self_play.py  supervised_learning.py  train_valuenet.py
training/dataset/: gen_score_prob_dataset.py
